--- a/techreview/tech/templates/base.html
+++ b/techreview/tech/templates/base.html
@@ -17,7 +17,9 @@
 </div> 
 <ul class="nav navbar-nav"> 
 <li><a href="{% url 'products' %}"> Products</a> </li>
-<li><a href="{% url 'newproduct' %}"> Add Product</a></li> 
+<li><a href="{% url 'newproduct' %}"> Add Product</a></li>
+<li><a href="{% url 'login' %}"> Login</a></li>
+<li><a href="{% url 'logout' %}"> Logout</a></li> 
 </ul> 
 </div> 
 </nav> 
