--- a/techreview/tech/templates/tech/products.html
+++ b/techreview/tech/templates/tech/products.html
@@ -3,7 +3,7 @@
 <h2>Products</h2>
 <ul>
     {% for p in product_list %}
-        <li><a href="{% url 'detail' id=p.id %}">{{ p.productname }}</a></li>
+    <li>{% p.productname %}</li>
     {% endfor %}
 </ul>
 
